# KairoScale

./: .env.example  .gitignore  PLAN.md  README.md  modal_app.py  pyproject.toml  report.md  report_personaplex.md  requirements.txt  settings.json  temp_tail_output.txt  test_modal.py  test_modal_ls.py  test_modal_ls2.py  test_modal_sandbox.py
.claude/: settings.local.json
.claude/agents/: KairoScale-swarm-leader.md  gpunity-swarm-leader.md
KairoScale/: __init__.py  cli.py  config.py  types.py
KairoScale/agent/: __init__.py  combo.py  diversity.py  heuristic.py  loop.py  prompts.py  tools.py
KairoScale/diagnosis/: bottleneck.py  gpuSelector.py
KairoScale/hardware/: __init__.py  (+1 more)
gpunity/: __init__.py  cli.py  config.py  types.py
gpunity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: benchmark_fixture_report.md  benchmark_gpunity_report.md  benchmark_personaplex_via_gpunity.md  non_dry_report.md  openai_report.md  oss_llama_cpu.txt  pytorch3dunet_fullrun_modal.md  pytorch3dunet_prod_openai_full.md  smoke_report.md  tmp_heuristic_dryrun.md  tmp_openai_dryrun.md  tmp_openai_dryrun_after_fix.md
scripts/: swarm_tmux.sh
swarm/: BRIEF.md  DECISIONS.md  INTERFACES.md  STATUS.md
tests/: test_agent_tools.py  test_baselines.py  test_combo.py  test_config.py  test_divergence.py  test_diversity.py  test_hardware.py  test_heuristic.py  test_modal_provider.py  test_modal_runner.py  test_objective.py  test_patcher.py  test_profiler.py  test_reporter.py  test_types.py  test_ui_app.py  test_utils.py  test_validator_wrapper.py
(+70 files in other folders)
