[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpunity"
version = "0.1.0"
description = "ML Training Optimization Pipeline — profile, analyze, validate, and report."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.39"]
openai = ["openai>=1.12"]
modal = ["modal>=0.64"]
charts = ["matplotlib>=3.8"]
all = [
    "anthropic>=0.39",
    "openai>=1.12",
    "modal>=0.64",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gpunity = "gpunity.cli:main"

[tool.setuptools.packages.find]
include = ["gpunity*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
